--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
+      "@styles/*": ["./src/styles/*"],
+      "@components/*": ["./src/components/*"],
       "@/*": ["./src/*"]
     }
   },
