feat: :wrench: Configure pandacss with postcss

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "paths": {
       "@styles/*": ["./src/styles/*"],
       "@components/*": ["./src/components/*"],
+      "@styled-system/*": ["./styled-system/*"],
       "@/*": ["./src/*"]
     }
   },
