--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@radix-ui/react-slider": "^1.1.2",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@pandacss/dev": "^0.15.3",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "latest"
