feat: :sparkles: Add getDefaultValues util

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "paths": {
       "@styles/*": ["./src/styles/*"],
       "@components/*": ["./src/components/*"],
+      "@utils/*": ["./src/utils/*"],
       "@styled-system/*": ["./styled-system/*"],
       "@/*": ["./src/*"]
     }
